--- a/package.json
+++ b/package.json
@@ -15,11 +15,23 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@chakra-ui/gatsby-plugin": "^2.0.1",
+    "@chakra-ui/icons": "^1.0.15",
+    "@chakra-ui/react": "^1.6.7",
+    "@emotion/react": "^11.4.1",
+    "@emotion/styled": "^11.3.0",
+    "@fontsource/inter": "^4.5.0",
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
+    "framer-motion": "^4.1.17",
     "gatsby": "^3.13.0",
+    "gatsby-plugin-image": "^1.13.0",
     "gatsby-plugin-mdx": "^2.13.0",
+    "gatsby-plugin-sharp": "^3.13.0",
+    "gatsby-remark-images": "^5.10.0",
+    "gatsby-remark-katex": "^5.10.0",
     "gatsby-source-filesystem": "^3.13.0",
+    "katex": "^0.13.18",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   }
